# flitton_fib_rs

./: Cargo.toml  pyproject.toml  setup.py
flitton_fib_rs/: __init__.py  config_number_command.py  counter.py  fib_number_adapter.py  fib_number_command.py  numpy_model.py  object_interface.py
src/: lib.rs  numpy_model.rs
src/class_module/: fib_processor.rs
src/fib_calcs/: fib_number.rs  fib_numbers.rs
src/interface/: config.rs  mod.rs  object.rs
