[build-system]
requires = ["setuptools>=62.4", "setuptools_rust"]
build-backend = "setuptools.build_meta"

[tool.setuptools_rust.ext-modules]
flitton_fib_rs = {
  path = "Cargo.toml",
  binding = "pyo3",
  # Add additional options here if needed (e.g., src for custom source files)
}

[project]
name = "flitton-fib-rs"
description = "Example of the fib funcs."
dynamic = ["version"]
requires-python = ">= 3.8"
packages=["flitton_fib_rs"]
classifiers=[
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
]
dependencies = [
  "PyYAML",
  "numpy",
]

[project.optional-dependencies]
gui = ["PyQt5"]
cli = [
  "rich",
  "click",
]