[build-system]
requires = ["setuptools>=42", "setuptools_rust>=0.11", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flitton-fib-rs"
version = "0.1"
description = ""
readme = ""
requires-python = ">=3.6"
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
]

[project.urls]
homepage = "https://github.com/Alex-Wol01100110/flitton_fib_rs/tree/master"
repository = "https://github.com/Alex-Wol01100110/flitton_fib_rs/tree/master"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
]

[project.scripts]
fib-number = "flitton_fib_rs.fib_number_command:fib_number_command"
config-fib = "flitton_fib_rs.config_number_command:config_number_command"

[project.dependencies]
PyYAML = ">=4.1.2"
numpy = "^2.0.1"

[tool.setuptools.packages.find]
where = ["flitton_fib_rs"]

[tool.setuptools]
rust-extensions = [
    {module = "flitton_fib_rs.flitton_fib_rs", path = "Cargo.toml", binding = "PyO3"},
]